--- a/InfoBridge/InfoBridge.csproj
+++ b/InfoBridge/InfoBridge.csproj
@@ -98,6 +98,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="AppData\" />
     <Folder Include="Images\" />
   </ItemGroup>
   <PropertyGroup>
